# BpmSoft-ML-Gateway

./: .gitignore  README.md
Backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
Backend/.cache_fontconfig/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9
Backend/.mplconfig/: fontlist-v390.json
Backend/app/: main.py
Backend/app/api/routes/: __init__.py  health.py  predict.py
Backend/app/core/: audit.py  config.py  errors.py  logging.py  runtime_checks.py
Backend/app/middleware/: request_id.py
Backend/app/schemas/: common.py  demand.py  price.py
Backend/app/services/: demand_adapter.py  demand_router.py  model_registry.py  price_mock.py  rl_demand_adapter.py  rl_metrics_service.py
Backend/artifacts/rl_metrics/: metrics_by_category.csv  metrics_by_category_baseline.csv  metrics_by_segment.csv  metrics_by_segment_baseline.csv  metrics_by_sku.csv  metrics_by_sku_baseline.csv  metrics_overall.json  predictions_test.csv
Backend/artifacts/rl_model/: preprocessor.pkl
Backend/postman/: BPMSoft_ML_Services.postman_collection.json
Backend/tests/: test_api.py  test_demand_adapter.py  test_demand_router.py
